tests/ui/diagnostic-width/E0271.ascii.stderr
error[E0271]: type mismatch resolving `<Result<..., ()> as Future>::Error == Foo`
  --> $DIR/E0271.rs:19:5
   |
LL | /     Box::new(
LL | |         Ok::<_, ()>(
LL | |             Err::<(), _>(
LL | |                 Ok::<_, ()>(
...  |
LL | |     )
   | |_____^ type mismatch resolving `<Result<..., ()> as Future>::Error == Foo`
   |
note: expected this to be `Foo`
  --> $DIR/E0271.rs:9:18
   |
LL |     type Error = E;
   |                  ^
   = note: required for the cast from `Box<Result<..., ()>>` to `Box<...>`
   = note: the full name for the type has been written to '$TEST_BUILD_DIR/E0271.long-type-$LONG_TYPE_HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
